feat(quantity): apply jspecify annotations